<resources>
    <string name="about_content">"SeeClickFix is a communications platform for citizens to report non-emergency issues, and governments to track, manage, and reply--ultimately making communities better through transparency, collaboration, and cooperation.

They say all politics is local. While we're not political, we do believe that changes that have a real impact on our daily lives occur at the neighborhood or city level. It's our goal to provide the best tools for residents and governments to communicate for all sizes, populations, and budgets.

SeeClickFix could not be done without help. On top of the passionate, fast-growing team of entrepreneurs at SeeClickFix, it is really only made possible by the amazing volunteers, citizens, and members of governments large and small who are passionate about everything civic."</string>
    <string name="abs__action_bar_home_description">Navigate home</string>
    <string name="abs__action_bar_up_description">Navigate up</string>
    <string name="abs__action_menu_overflow_description">More options</string>
    <string name="abs__action_mode_done">Done</string>
    <string name="abs__activity_chooser_view_see_all">See all...</string>
    <string name="abs__activitychooserview_choose_application">Choose an application</string>
    <string name="abs__searchview_description_clear">Clear query</string>
    <string name="abs__searchview_description_query">Search query</string>
    <string name="abs__searchview_description_search">Search</string>
    <string name="abs__searchview_description_submit">Submit query</string>
    <string name="abs__searchview_description_voice">Voice search</string>
    <string name="abs__shareactionprovider_share_with">Share with</string>
    <string name="abs__shareactionprovider_share_with_application">Share with %s</string>
    <string name="abt_legal_hdr">LEGAL NOTICES</string>
    <string name="abt_title">About</string>
    <string name="act_title">Account</string>
    <string name="add_watcher_key">ADD_WATCHER</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_flag">Flag</string>
    <string name="app_name">Commonwealth Connect</string>
    <string name="cancel">Cancel</string>
    <string name="click">Click</string>
    <string name="cmt_moderated">Submitted For Moderation</string>
    <string name="cmt_response_acknowledged">%s acknowledged</string>
    <string name="cmt_response_closed">%s closed</string>
    <string name="cmt_response_comment_added">Comment added</string>
    <string name="cmt_response_open">%s opened</string>
    <string name="cmt_response_vote">Voted added for: %s</string>
    <string name="cmt_response_watcher_added">Following: %s</string>
    <string name="cmt_status_acknowledged">Acknowledged</string>
    <string name="cmt_status_closed">Closed</string>
    <string name="cmt_status_comment_added">Comment</string>
    <string name="cmt_status_open">Opened</string>
    <string name="cmt_status_thanks">Thank You</string>
    <string name="cmt_status_vote">Vote</string>
    <string name="cmt_status_watcher_added">Following</string>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="date_picker_dialog_title">Set date</string>
    <string name="date_time_done">Done</string>
    <string name="date_time_set">Set</string>
    <string name="dlg_inet_blocked_msg">If you are using public WiFi, be sure you have authenticated and try again.</string>
    <string name="dlg_inet_blocked_title">Network Services Unavailable</string>
    <string name="dlg_network_down_msg">Data Service Unavailable</string>
    <string name="dlg_noactivity_msg">The service you selected is unavailable on this device.</string>
    <string name="dlg_noactivity_title">Service Unavailable</string>
    <string name="dlg_nophone_msg_fmt">Phone number: %s</string>
    <string name="dlg_nophone_title">Dial Tone Unavailable</string>
    <string name="dlg_warn_exit_msg">Exit application?</string>
    <string name="dlg_warn_exit_title">Exit application?</string>
    <string name="dlg_warn_net_msg">Unable to connect to the network, would you like to retry?</string>
    <string name="dlg_warn_net_ok">Retry</string>
    <string name="dlg_warn_net_title">No network</string>
    <string name="dlg_warn_next">Show this message next time</string>
    <string name="drawer_close">" "</string>
    <string name="drawer_open">" "</string>
    <string name="dtl_add_comment_btn_label">Send comment</string>
    <string name="dtl_add_comment_label">Add a comment</string>
    <string name="dtl_add_comment_label_adding">Sending</string>
    <string name="dtl_comment_blank_toast">Please enter a comment</string>
    <string name="dtl_comment_header">Comments</string>
    <string name="dtl_comment_header_singular">" "</string>
    <string name="dtl_comment_hint">Your comment</string>
    <string name="dtl_delete_media_btn">Delete</string>
    <string name="dtl_description">%s</string>
    <string name="dtl_edit_media_btn">Edit</string>
    <string name="dtl_issue_id">Issue ID: %s</string>
    <string name="dtl_location">%s</string>
    <string name="dtl_map_label">Location</string>
    <string name="dtl_no_comments">No comments yet</string>
    <string name="dtl_share_label">Share</string>
    <string name="dtl_status_label">Change status</string>
    <string name="dtl_summary">%s</string>
    <string name="dtl_title">Issue details</string>
    <string name="err_authentication_failure">Login failed</string>
    <string name="err_cant_build_map">There was a problem loading data for the map</string>
    <string name="err_cant_load_list">There was a problem loading the issue list, retry?</string>
    <string name="err_comment_not_uploaded">Unable to upload comment</string>
    <string name="hash">(8615b81)</string>
    <string name="help_contact_address">"746 Chapel Street Third Floor
New Haven, CT 06510"</string>
    <string name="help_contact_address_title">Address:</string>
    <string name="help_contact_phone">Toll Free: +1 800.369.9060</string>
    <string name="help_contact_phone2">Local: +1 203.752.0777</string>
    <string name="help_contact_title">Contact Information</string>
    <string name="help_content">Visit SeeClickFix Support online or shoot an email to contact@seeclickfix.com.</string>
    <string name="help_title">Help</string>
    <string name="login_displayname">Display name</string>
    <string name="login_displayname_hint">ex: Jane</string>
    <string name="login_displayname_subtext">Your display name is visible to everyone.</string>
    <string name="login_dont_have_acct">"Don't have an account?"</string>
    <string name="login_dont_have_acct_text">Sign up to receive updates on local issues, follow points of interest to you and more</string>
    <string name="login_email_hint">you@example.com</string>
    <string name="login_email_label">Email</string>
    <string name="login_email_subtext">Please use a valid email address. We will use it to send a confirmation email.</string>
    <string name="login_pwd_forgot">Forgot Password?</string>
    <string name="login_pwd_label">Password</string>
    <string name="login_pwd_label2">Confirm password</string>
    <string name="login_signin">Sign in</string>
    <string name="login_skip">Skip this for now</string>
    <string name="reg_create_account_header">Create an Account</string>
    <string name="reg_submit_btn">Create Account</string>
    <string name="reg_terms_checkbox_label">I agree to the Terms of Use</string>
    <string name="reg_terms_link">[View Terms]</string>
    <string name="rptthx_body">"Thanks!  Your report is being sent."</string>
    <string name="rptthx_btn_report_another">Report another</string>
    <string name="rptthx_title">Thanks</string>
    <string name="scf_build_device">DEVICE</string>
    <string name="scf_build_env">ENVIRONMENT</string>
    <string name="scf_build_number">BUILD INFO</string>
    <string name="scf_build_os">ANDROID VERSION</string>
    <string name="scf_version">VERSION</string>
    <string name="timestamp">2015-08-12_1721</string>
    <string name="unb_subtext1">Identify problems and places for improvement in your neighborhood</string>
    <string name="unb_subtext1a">Welcome to SeeClickFix</string>
    <string name="unb_subtext3">We notify</string>
    <string name="unb_subtext3a">local governments and your community</string>
    <string name="unb_subtext3b">You receive</string>
    <string name="unb_subtext3c">alerts when the issue is resolved</string>
    <string name="unb_text1">See</string>
    <string name="unb_text3">Fix</string>
</resources>