<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_width="fill_parent" android:layout_height="fill_parent" android:src="@drawable/unb_sign" android:scaleType="centerCrop" />
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_fix" />
        <com.seeclickfix.ma.android.views.LogoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unb_text3" style="@style/SCF.Unboxing.Text.Large" />
        <com.seeclickfix.ma.android.views.LogoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unb_subtext3" style="@style/SCF.Unboxing.Text.Medium" />
        <com.seeclickfix.ma.android.views.LogoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unb_subtext3a" style="@style/SCF.Unboxing.Text.Small" />
        <com.seeclickfix.ma.android.views.LogoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unb_subtext3b" style="@style/SCF.Unboxing.Text.Medium" />
        <com.seeclickfix.ma.android.views.LogoTextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/unb_subtext3c" style="@style/SCF.Unboxing.Text.Small" />
    </LinearLayout>
</RelativeLayout>