<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="@style/SCF.Fragment"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.seeclickfix.ma.android.views.LogoTextView android:textSize="100.0sp" android:textColor="#ffcee29e" android:ellipsize="none" android:id="@id/rptthx_bg_txt" android:focusable="false" android:clickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="6.0dip" android:text="@string/rptthx_title" android:singleLine="true" />
    <TextView android:textSize="18.0sp" android:id="@id/rptthx_body_txt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:text="@string/rptthx_body" style="@style/GenericTextBody" />
    <Button android:textSize="16.0sp" android:id="@id/rptthx_rpt_another_btn" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8.0dip" android:text="@string/rptthx_btn_report_another" style="@style/GenericButton" />
</LinearLayout>